--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -78,6 +78,11 @@ label {
   margin: 10px 0;
 }
 
+#balance {
+  font-size: 32px;
+  font-weight: 600;
+}
+
 input[type='text'],
 input[type='number'] {
   border: 1px solid #dedede;
@@ -90,14 +95,15 @@ input[type='number'] {
 
 .btn {
   cursor: pointer;
-  background-color: #9c88ff;
+  background-color: #1C1D21;
   box-shadow: var(--box-shadow);
   color: #fff;
   border: 0;
+  border-radius: 10px;
   display: block;
   font-size: 16px;
   margin: 10px 0 30px;
-  padding: 10px;
+  padding: 15px;
   width: 100%;
 }
 
