--- a/src/style.css
+++ b/src/style.css
@@ -1,22 +1,35 @@
-@import url('https://fonts.googleapis.com/css?family=Lato&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 :root {
   --box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  --block-box-shadow: 0px 4px 5px 1px rgba(30, 30, 30, 0.1);
 }
 
 * {
   box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
+.block {
+  padding: 15px;
+  border-radius: 10px;
+  box-shadow: var(--block-box-shadow);
 }
 
 body {
-  background-color: #f7f7f7;
+  background-color: white;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   min-height: 100vh;
   margin: 0;
-  font-family: 'Lato', sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 18px;
 }
 
@@ -41,24 +54,6 @@ h4 {
   text-transform: uppercase;
 }
 
-.inc-exp-container {
-  background-color: #fff;
-  box-shadow: var(--box-shadow);
-  padding: 20px;
-  display: flex;
-  justify-content: space-between;
-  margin: 20px 0;
-}
-
-.inc-exp-container > div {
-  flex: 1;
-  text-align: center;
-}
-
-.inc-exp-container > div:first-of-type {
-  border-right: 1px solid #dedede;
-}
-
 .money {
   font-size: 20px;
   letter-spacing: 1px;
@@ -78,13 +73,8 @@ label {
   margin: 10px 0;
 }
 
-#balance {
-  font-size: 32px;
-  font-weight: 600;
-}
-
-input[type='text'],
-input[type='number'] {
+input[type="text"],
+input[type="number"] {
   border: 1px solid #dedede;
   border-radius: 2px;
   display: block;
@@ -95,7 +85,7 @@ input[type='number'] {
 
 .btn {
   cursor: pointer;
-  background-color: #1C1D21;
+  background-color: #1c1d21;
   box-shadow: var(--box-shadow);
   color: #fff;
   border: 0;
