--- a/src/style.css
+++ b/src/style.css
@@ -9,18 +9,6 @@
   --block-box-shadow: 0px 4px 5px 1px rgba(30, 30, 30, 0.1);
 }
 
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
-.block {
-  padding: 15px;
-  border-radius: 10px;
-  box-shadow: var(--block-box-shadow);
-}
-
 body {
   background-color: white;
   display: flex;
@@ -31,41 +19,6 @@ body {
   margin: 0;
   font-family: "Montserrat", sans-serif;
   font-size: 18px;
-}
-
-.container {
-  margin: 30px auto;
-  width: 400px;
-}
-
-h1 {
-  letter-spacing: 1px;
-  margin: 0;
-}
-
-h3 {
-  border-bottom: 1px solid #bbb;
-  padding-bottom: 10px;
-  margin: 40px 0 10px;
-}
-
-h4 {
-  margin: 0;
-  text-transform: uppercase;
-}
-
-.money {
-  font-size: 20px;
-  letter-spacing: 1px;
-  margin: 5px 0;
-}
-
-.money.plus {
-  color: #2ecc71;
-}
-
-.money.minus {
-  color: #c0392b;
 }
 
 label {
@@ -109,13 +62,14 @@ input[type="number"] {
 }
 
 .list li {
-  background-color: #fff;
-  box-shadow: var(--box-shadow);
-  color: #333;
+  background-color: #f3f3f3;
+  border-radius: 15px;
+  padding: 15px;
+  font-weight: 600;
+  color: #171717;
   display: flex;
   justify-content: space-between;
   position: relative;
-  padding: 10px;
   margin: 10px 0;
 }
 
@@ -131,13 +85,15 @@ input[type="number"] {
   cursor: pointer;
   background-color: #e74c3c;
   border: 0;
+  border-radius: 5px;
   color: #fff;
-  font-size: 20px;
+  font-size: 18px;
   line-height: 20px;
-  padding: 2px 5px;
+  padding: 2px 7px;
   position: absolute;
   top: 50%;
-  left: 0;
+  /* left: 0; */
+  right: -15%;
   transform: translate(-100%, -50%);
   opacity: 0;
   transition: opacity 0.3s ease;
